resolved fdo#64384 check subtotal row filtered also for single reference

Change-Id: Ic00b9135021f2c5f76755efbe88fc1f12e655320